--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Samantha Nadler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
     <h1>Hello World</h1>
