--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Welcome to my personal site!</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
 </html>
