--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Welcome to my personal site!</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <p>Click <a href="/about-me.html">here</a> to get to know me!</p>
   </body>
 </html>
