--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Projects | Samantha Nadler</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
+  </head>
+  <body>
+    <h1>Check out my projects!</h1>
+    <p>I'm hosted with GitHub Pages.</p>
+  </body>
+</html>
