--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Welcome to my personal site!</h1>
     <p>Click <a href="/about-me.html">here</a> to get to know me!</p>
+    <p>Find my projects <a href="/projects.html">here</a>!</p>
   </body>
 </html>
