--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
+    <div class="top-navbar">
+      <a class="active" href="/index.html">Home</a>
+      <a href="/about-me.html">About Me</a>
+      <a href="/projects.html">Projects</a>
+    </div>
     <h1>Welcome to my personal site!</h1>
     <p>Click <a href="/about-me.html">here</a> to get to know me!</p>
     <p>Find my projects <a href="/projects.html">here</a>!</p>
