--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
-    <div class="top-navbar">
+    <div class="topnav">
       <a class="active" href="/index.html">Home</a>
       <a href="/about-me.html">About Me</a>
       <a href="/projects.html">Projects</a>
