--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="active" href="/index.html">Home</a>
+      <a class="active" href="samanthanadler.github.io">Home</a>
       <a href="/about-me.html">About Me</a>
       <a href="/projects.html">Projects</a>
     </div>
