--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
     <title>About Me | Samantha Nadler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Get to know me!</h1>
