--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
-    <div class="topnav">
-      <a class="active" href="samanthanadler.github.io">Home</a>
-      <a href="/about-me.html">About Me</a>
-      <a href="/projects.html">Projects</a>
-    </div>
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
     <h1>Welcome to my personal site!</h1>
     <p>Click <a href="/about-me.html">here</a> to get to know me!</p>
     <p>Find my projects <a href="/projects.html">here</a>!</p>
