--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,15 @@
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
     <h1>Check out my projects!</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
