--- a/about-me.html
+++ b/about-me.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a href="samanthanadler.github.io" class="active">Home</a>
+      <a href="/about-me.html">About Me</a>
+      <a href="/projects.html">Projects</a>
+      <a href="#about">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
-  </a>
-</div>
+      </a>
+    </div>
     <h1>Get to know me!</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
