--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <script src="script.js"></script>
   </head>
   <body>
-<div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <div class="topnav" id="myTopnav">
+      <a href="samanthanadler.github.io" class="active">Home</a>
+      <a href="/about-me.html">About Me</a>
+      <a href="/projects.html">Projects</a>
+      <a href="#about">Contact</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
-  </a>
-</div>
+      </a>
+    </div>
     <h1>Welcome to my personal site!</h1>
     <p>Click <a href="/about-me.html">here</a> to get to know me!</p>
     <p>Find my projects <a href="/projects.html">here</a>!</p>
