--- a/about-me.html
+++ b/about-me.html
@@ -3,9 +3,9 @@
   <head>
     <title>About Me | Samantha Nadler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
