--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,6 @@
       </a>
     </div>
     <h1>Check out my projects!</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <p>Nothing to see here...yet!</p>
   </body>
 </html>
