--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="samanthanadler.github.io" class="active">Home</a>
+      <a href="samanthanadler.github.io">Home</a>
       <a href="/about-me.html">About Me</a>
-      <a href="/projects.html">Projects</a>
+      <a href="/projects.html" class="active">Projects</a>
       <a href="#about">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
