--- a/about-me.html
+++ b/about-me.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="samanthanadler.github.io" class="active">Home</a>
-      <a href="/about-me.html">About Me</a>
+      <a href="samanthanadler.github.io">Home</a>
+      <a href="/about-me.html" class="active">About Me</a>
       <a href="/projects.html">Projects</a>
       <a href="#about">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
