--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
-      <a href="samanthanadler.github.io" class="active">Home</a>
-      <a href="/about-me.html">About Me</a>
-      <a href="/projects.html">Projects</a>
-      <a href="#about">Contact</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-      </a>
-    </div>
-    <h1>Welcome to my personal site!</h1>
-    <p>Click <a href="/about-me.html">here</a> to get to know me!</p>
-    <p>Find my projects <a href="/projects.html">here</a>!</p>
+    <h1>Samantha Nadler</h1>
+    <h3>Aspiring Data Scientist</h3>
+    <p></p>
   </body>
 </html>
