--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <h1>Samantha Nadler</h1>
     <h3>Aspiring Data Scientist</h3>
-    <p></p>
+    <p>--------------------------------------</p>
+
+    <h3>About Me</h3>
   </body>
 </html>
