--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Samantha Nadler</h1>
-    <h3>Aspiring Data Scientist</h3>
-    <p>--------------------------------------</p>
+    <div class="left">
+      <img src="https://lh3.googleusercontent.com/pw/AP1GczP2NdVTyn8F6Ge-dKAxckcHXeZFKftAcHdjPy5G3j7f2Sj8FEwf1sig9TyAP9TCy7MzEurelJT_SIKFUc5TCgOZCSpxnxU2VzFes8-gZqtHGY9m55ICw48ezbEpSVGLb9ecN7I3sOTAkAdUbkIaZqTOaBC0YDBisyNV3aZPhIbcL22OttwDqRCpshYadLwZY-vBr3w1LU9XSa6_n2siBc1Qn4YdWmypdnio3967n0S6mqVWhtx_yHMfdRSuEPt8oa76H3dE0-s-5Bl-P1UmA1_RN3jwLmVRNVIxcZvDMuILfv2fd6UKZFIcHS1xk6S5-v0K3zpulXaRdgEzqdOS6mb_CV81vyuLkldRahWdTByxuu5gpQH1-SU4M-DKU44pgQuo5ETq-02KtSzcjWn98orcDW9btrGc2NwRh22VciDZoYNKQscXF2gflQenbvXy4tjmLPdox1pWLS5RicusSOPY-soKHFK2tCk3btXICQLJweA3RnaixkPf4zoQ2uPFjdQaazssS-h88wm8DfWJwXaj6azkkN9SZ46HEfQOCoUSwUD1QYy84EB5Cd9jtBR1NpH2TMAA_MkxLdE_Kt4SBsDwmgiYv4hi9rInZL-ZpT6pGZn40J_kGNkIKumoiuPa4xP127uNUecvS446Wq8oN0Pm5SrTVE2gab95IxnFrqgb7aB8vs4l0a0x5h_iegfVTXHRUF0ujXjMtjjukQiXstj-37TbfENxRHrQo6OUyU0yijFilPNRoAp3MvjTMAlJXxZjoleg-43f05jaDhCO7ScupBmItWI5ZkevXcn-2dMPiXgSnXlpUDp29PuTQagGr020ZtXKDiUEFAaniclUBMOcgCJwvJX2X1crJH3qIz-247Qf0cEQnYsfqLdef92jd8pkhItTe7Ofhvowf_InWI0iwWFfNTPi68jfV4yPkHkqUvta40GKue8=w651-h869-s-no-gm?authuser=0">
+    </div>
+    <div class="right>
+      <h1>Samantha Nadler</h1>
+      <h3>Aspiring Data Scientist</h3>
+      <p>--------------------------------------</p>
 
-    <h3>About Me</h3>
+      <h3>About Me</h3>
+    </div>
   </body>
 </html>
