--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Samantha Nadler</h1>
-    <h3>Aspiring Data Scientist</h3>
-    <p>--------------------------------------</p>
+    <div class="header">
+      <h1>Samantha Nadler</h1>
+      <h3>Aspiring Data Scientist</h3>
+    </div>
   </body>
 </html>
