--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
       <h1>Samantha Nadler</h1>
       <h3>Aspiring Data Scientist</h3>
     </div>
+    <div class="topnav">
+      <a href="samanthanadler.github.io">Home</a>
+      <a href="#about">About Me</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
   </body>
 </html>
