--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </div>
-    <div class="main">
-      <h3>My Projects</h3>
-    </div>
-    <div class="side">
-      <div>
-        <h3>About Me</h3>
+    <div class="column">
+      <div class="main">
+        <h3>My Projects</h3>
       </div>
-      <div>
-        <h3>Contact</h3>
-        <p><strong>Email:</strong> nadler.2004@gmail.com</p>
-        <p><strong>GitHub:</strong> github.com/samanthanadler</p>
-        <p><strong>LinkedIn: </strong>linkedin.com/in/nadler-data-science</p>
+      <div class="side">
+        <div>
+          <h3>About Me</h3>
+        </div>
+        <div>
+          <h3>Contact</h3>
+          <p><strong>Email:</strong> nadler.2004@gmail.com</p>
+          <p><strong>GitHub:</strong> github.com/samanthanadler</p>
+          <p><strong>LinkedIn: </strong>linkedin.com/in/nadler-data-science</p>
+        </div>
       </div>
   </body>
 </html>
