--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <div>
           <h3>Contact</h3>
-          <p><strong>Email:</strong> nadler.2004@gmail.com</p>
-          <p><strong>GitHub:</strong> github.com/samanthanadler</p>
-          <p><strong>LinkedIn: </strong>linkedin.com/in/nadler-data-science</p>
+          <p><strong>Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
+          <p><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
         </div>
       </div>
   </body>
