--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
       <h1>Samantha Nadler</h1>
       <h3>Aspiring Data Scientist</h3>
     </div>
-    <div class="column">
-      <div class="main">
-        <h3>My Projects</h3>
-      </div>
-      <div class="side">
-        <div>
-          <h3>About Me</h3>
+    <div class="row">
+      <div class="column">
+        <div class="main">
+          <h3>My Projects</h3>
         </div>
-        <div>
-          <h3>Contact</h3>
-          <p><strong>Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
-          <p><strong>GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
-          <p><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
+        <div class="side">
+          <div>
+             <h3>About Me</h3>
+          </div>
+          <div>
+            <h3>Contact</h3>
+            <p><strong>Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
+            <p><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
+          </div>
         </div>
       </div>
   </body>
