--- a/index.html
+++ b/index.html
@@ -12,22 +12,43 @@
       <h1>Samantha Nadler</h1>
       <h3>Aspiring Data Scientist</h3>
     </div>
-    <div class="row">
-      <div class="column">
-        <div class="main">
-          <h3>My Projects</h3>
-        </div>
-        <div class="side">
-          <div>
-             <h3>About Me</h3>
-          </div>
-          <div>
-            <h3>Contact</h3>
-            <p><strong>Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
-            <p><strong>GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
-            <p><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
-          </div>
-        </div>
-      </div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg">Image</div><br>
+      <div class="fakeimg">Image</div><br>
+      <div class="fakeimg">Image</div>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text..</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <h2>Footer</h2>
+</div>
   </body>
 </html>
