--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
 
 <div class="row">
   <div class="leftcolumn">
+    <h2>Projects</h2>
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-    </div>
-    <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
+      <h3>Personal Portfolio</h3>
+      <h5>May 2024 - Present</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
     </div>
@@ -41,7 +36,7 @@
       <div class="fakeimg">Image</div>
     </div>
     <div class="card">
-      <h3>Follow Me</h3>
+      <h3>Contact</h3>
       <p>Some text..</p>
     </div>
   </div>
