--- a/index.html
+++ b/index.html
@@ -30,14 +30,10 @@
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     </div>
     <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
-    </div>
-    <div class="card">
       <h3>Contact</h3>
-      <p>Some text..</p>
+      <p><strong>Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
     </div>
   </div>
 </div>
