--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="leftcolumn">
     <h2>Projects</h2>
     <div class="card">
-      <h3>Personal Portfolio</h3>
+      <h3><a href="https://github.com/samanthanadler/samanthanadler.github.io">Personal Portfolio</a></h3>
       <h5>May 2024 - Present</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
       <p>My first project in this portfolio is the portfolio itself! This webpage was created right before my Break Through Tech AI program for the 2024-2025 school year, and it would be the place where I would share my AI and machine learning-centric projects!</p>
