--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
     </div>
     <h2>Contact</h2>
     <div class="card">
-      <p><strong>Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
-      <p><strong>GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
+      <p><strong>✉️ Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
+      <p><strong>🔗 LinkedIn:</strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
+      <p><strong>😺 GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
     </div>
   </div>
 </div>
-
 <div class="footer">
   <h2>Footer</h2>
 </div>
