--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html>
   <head>
     <title>Samantha Nadler</title>
@@ -30,9 +30,10 @@
     </div>
     <h2>Contact</h2>
     <div class="card">
-      <p><strong>✉️ Email:</strong> <a href="mailto:nadler.2004@gmail.com">nadler.2004@gmail.com</a></p>
-      <p><strong>🔗 LinkedIn:</strong> <a href="https://www.linkedin.com/in/nadler-data-science/">linkedin.com/in/nadler-data-science</a></p>
-      <p><strong>😺 GitHub:</strong> <a href="https://github.com/samanthanadler">github.com/samanthanadler</a></p>
+      <p>✉️ <a href="mailto:nadler.2004@gmail.com"><strong>Email</strong></a></p>
+      <p>🔗 <a href="https://www.linkedin.com/in/nadler-data-science/"><strong>LinkedIn</strong></a></p>
+      <p>😺 <a href="https://github.com/samanthanadler"><strong>GitHub</strong></a></p>
+      <p>📝 <a href="https://drive.google.com/file/d/1w4LXUdqWzudu5qs9GS2PRLr4VfQpOGXZ/view?usp=sharing"><strong>My Resume</strong></a></p>
     </div>
   </div>
 </div>
