--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ l<!DOCTYPE html>
     </div>
     <h2>Contact</h2>
     <div class="card">
-      <p>✉️ <a href="mailto:nadler.2004@gmail.com"><strong>Email</strong></a></p>
-      <p>🔗 <a href="https://www.linkedin.com/in/nadler-data-science/"><strong>LinkedIn</strong></a></p>
-      <p>😺 <a href="https://github.com/samanthanadler"><strong>GitHub</strong></a></p>
-      <p>📝 <a href="https://drive.google.com/file/d/1w4LXUdqWzudu5qs9GS2PRLr4VfQpOGXZ/view?usp=sharing"><strong>My Resume</strong></a></p>
+      <p>✉️ <a href="mailto:nadler.2004@gmail.com" target="_blank" rel="noopener noreferrer"><strong>Email</strong></a></p>
+      <p>🔗 <a href="https://www.linkedin.com/in/nadler-data-science/" target="_blank" rel="noopener noreferrer"><strong>LinkedIn</strong></a></p>
+      <p>😺 <a href="https://github.com/samanthanadler" target="_blank" rel="noopener noreferrer"><strong>GitHub</strong></a></p>
+      <p>📝 <a href="https://drive.google.com/file/d/1w4LXUdqWzudu5qs9GS2PRLr4VfQpOGXZ/view?usp=sharing" target="_blank" rel="noopener noreferrer"><strong>My Resume</strong></a></p>
     </div>
   </div>
 </div>
