--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="header">
-      <h1>Samantha Nadler</h1>
-      <h3>Aspiring Data Scientist</h3>
+      <h3>Hi, I'm Samantha Nadler!</h3>
+      <h1>I am an aspiring data scientist from New York!</h1>
     </div>
 
 <div class="row">
