--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="header">
       <h3>Hi, I'm Samantha Nadler!</h3>
       <h1>I am an aspiring data scientist from New York!</h1>
+      <a href="/projects.html">My Projects</a>
     </div>
 
 <div class="row">
