--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <h3>Hi, I'm Samantha Nadler!</h3>
-      <h1>I am an aspiring data scientist from New York!</h1>
+      <h1>I am a student at Hofstra University and an aspiring data scientist!</h1>
       <a href="/projects.html">My Projects</a>
     </div>
 
