--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Samantha Nadler</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
+  </head>
+
+<body>
 <div class="about-section">
   <h1>My Projects</h1>
   <p>Check out some of my projects!</p>
@@ -44,3 +54,5 @@
     </div>
   </div>
 </div>
+</body>
+</html>
