--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         <h2>Personal Portfolio</h2>
         <p class="title">May 2024 - Present</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p><button class="button">GitHub Repository</button></p>
+        <a class="button" href="https://github.com/samanthanadler/samanthanadler.github.io" target="_blank" rel="noopener noreferrer">GitHub Repository</a>
       </div>
     </div>
   </div>
