--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,6 @@
   <p>Check out some of my projects!</p>
 </div>
 
-<h2 style="text-align:center">Our Team</h2>
 <div class="row">
   <div class="column">
     <div class="card">
@@ -22,7 +21,7 @@
         <h2>Personal Portfolio</h2>
         <p class="title">May 2024 - Present</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <a class="button" href="https://github.com/samanthanadler/samanthanadler.github.io" target="_blank" rel="noopener noreferrer">GitHub Repository</a>
+        <a class="button" href="https://github.com/samanthanadler/samanthanadler.github.io" target="_blank" rel="noopener noreferrer">GitHub Repository</a><br>
       </div>
     </div>
   </div>
