--- a/index.html
+++ b/index.html
@@ -7,39 +7,10 @@
     <link rel="icon" type="image/x-icon" href="https://freepngimg.com/save/127830-alphabet-fancy-free-photo/736x1074">
   </head>
   <body>
-    <div class="header">
-      <h3>Hi, I'm Samantha Nadler!</h3>
-      <h1>I am a student at Hofstra University and an aspiring data scientist!</h1>
-      <a href="/projects.html">My Projects</a>
-    </div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <h2>Projects</h2>
-    <div class="card">
-      <h3><a href="https://github.com/samanthanadler/samanthanadler.github.io" target="_blank" rel="noopener noreferrer">Personal Portfolio</a></h3>
-      <h5>May 2024 - Present</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>My first project in this portfolio is the portfolio itself! This webpage was created right before my Break Through Tech AI program for the 2024-2025 school year, and it would be the place where I would share my AI and machine learning-centric projects!</p>
-    </div>
-  </div>
-  <div class="rightcolumn">
-    <h2>About Me</h2>
-    <div class="card">
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <h2>Contact</h2>
-    <div class="card">
-      <p>✉️ <a href="mailto:nadler.2004@gmail.com" target="_blank" rel="noopener noreferrer"><strong>Email</strong></a></p>
-      <p>🔗 <a href="https://www.linkedin.com/in/nadler-data-science/" target="_blank" rel="noopener noreferrer"><strong>LinkedIn</strong></a></p>
-      <p>😺 <a href="https://github.com/samanthanadler" target="_blank" rel="noopener noreferrer"><strong>GitHub</strong></a></p>
-      <p>📝 <a href="https://drive.google.com/file/d/1w4LXUdqWzudu5qs9GS2PRLr4VfQpOGXZ/view?usp=sharing" target="_blank" rel="noopener noreferrer"><strong>My Resume</strong></a></p>
-    </div>
-  </div>
-</div>
-<div class="footer">
-  <h2>Footer</h2>
+    <div class="topnav" id="myTopnav">
+      <a href="samanthanadler.github.io" class="active">Samantha Nadler</a>
+      <a href="/projects.html">Projects</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 </div>
   </body>
 </html>
