--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   </head>
 
 <body>
-<div class="about-section">
+<div class="header">
   <h1>My Projects</h1>
   <p>Check out some of my projects!</p>
 </div>
