--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <a href="samanthanadler.github.io" class="active">Samantha Nadler</a>
       <a href="/projects.html">Projects</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-</div>
+    </div>
+    <div class="header">
+      <h1>Hi! I'm Samantha Nadler!</h1>
+      <p>I'm a student at Hofstra University and an aspring data scientist!</p>
+    </div>
   </body>
 </html>
