--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="topnav" id="myTopnav">
       <a href="samanthanadler.github.io" class="active">Samantha Nadler</a>
       <a href="/projects.html">Projects</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="icon" onclick="resizeTopnav()"><i class="fa fa-bars"></i></a>
     </div>
     <div class="header">
       <h1>Hi! I'm Samantha Nadler!</h1>
