--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="samanthanadler.github.io" class="active">Samantha Nadler</a>
+      <a href="samanthanadler.github.io" class="active">Home</a>
       <a href="/projects.html">Projects</a>
       <a href="javascript:void(0);" class="icon" onclick="resizeTopnav()"><i class="fa fa-bars"></i></a>
     </div>
