--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header">
       <h1>Hi! I'm Samantha Nadler!</h1>
-      <p>I'm a student at Hofstra University and an aspring data scientist!</p>
+      <p>I'm a student at Hofstra University and an aspiring data scientist!</p>
     </div>
   </body>
 </html>
