--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
       <a href="/projects.html" class="active">Projects</a>
       <a href="javascript:void(0);" class="icon" onclick="resizeTopnav()"><i class="fa fa-bars"></i></a>
     </div>
-<div class="header">
+<div class="p-header">
   <h1>My Projects</h1>
   <p>Check out some of my projects!</p>
 </div>
