--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="/projects.html">Projects</a>
       <a href="javascript:void(0);" class="icon" onclick="resizeTopnav()"><i class="fa fa-bars"></i></a>
     </div>
-    <div class="header">
+    <div class="h-header">
       <h1>Hi! I'm Samantha Nadler!</h1>
       <p>I'm a student at Hofstra University and an aspiring data scientist!</p>
     </div>
